--- a/core/src/scss/utilities/mixins/typography/_credits.scss
+++ b/core/src/scss/utilities/mixins/typography/_credits.scss
@@ -9,8 +9,12 @@
 //
 @mixin credits {
   @include font-smoothing;
-
   color: $su-color-cool-grey;
-  font-size: 0.84em;
+  font-size: 1.4rem;
   line-height: 1.3;
+  font-style: italic;
+
+  @include grid-media('md') {
+    font-size: 1.6rem;
+  }
 }
